--- a/統計/統計.html
+++ b/統計/統計.html
@@ -34,18 +34,48 @@
   <tbody>
     <tr>
       <th>小計</th>
-      <td>43</td>
-      <td>69</td>
-      <td>62</td>
-      <td>55</td>
-      <td>31</td>
-      <td>55</td>
-      <td>27</td>
-      <td>35</td>
-      <td>61</td>
-      <td>68</td>
-      <td>10</td>
-      <td>516</td>
+      <td>48</td>
+      <td>70</td>
+      <td>65</td>
+      <td>58</td>
+      <td>33</td>
+      <td>58</td>
+      <td>29</td>
+      <td>39</td>
+      <td>63</td>
+      <td>70</td>
+      <td>13</td>
+      <td>546</td>
+    </tr>
+    <tr>
+      <th>110教育會考(補考)</th>
+      <td>4</td>
+      <td>0</td>
+      <td>2</td>
+      <td>2</td>
+      <td>1</td>
+      <td>2</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>14</td>
+    </tr>
+    <tr>
+      <th>110教育會考</th>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+      <td>3</td>
+      <td>2</td>
+      <td>1</td>
+      <td>3</td>
+      <td>16</td>
     </tr>
     <tr>
       <th>109教育會考</th>
@@ -590,11 +620,11 @@
     <tr>
       <th rowspan="4" valign="top">01生命世界</th>
       <th>1顯微鏡</th>
-      <td>15</td>
+      <td>17</td>
     </tr>
     <tr>
       <th>2動植物細胞的比較</th>
-      <td>15</td>
+      <td>17</td>
     </tr>
     <tr>
       <th>4生物體的組成層次</th>
@@ -602,7 +632,7 @@
     </tr>
     <tr>
       <th>3物質如何交換</th>
-      <td>5</td>
+      <td>6</td>
     </tr>
     <tr>
       <th rowspan="4" valign="top">02養分</th>
@@ -611,7 +641,7 @@
     </tr>
     <tr>
       <th>2酵素</th>
-      <td>18</td>
+      <td>19</td>
     </tr>
     <tr>
       <th>4消化系統</th>
@@ -624,20 +654,20 @@
     <tr>
       <th rowspan="2" valign="top">03運輸</th>
       <th>2循環系統</th>
-      <td>34</td>
+      <td>35</td>
     </tr>
     <tr>
       <th>1植物的運輸</th>
-      <td>28</td>
+      <td>30</td>
     </tr>
     <tr>
       <th rowspan="3" valign="top">04協調</th>
       <th>1神經系統</th>
-      <td>26</td>
+      <td>28</td>
     </tr>
     <tr>
       <th>2內分泌系統</th>
-      <td>17</td>
+      <td>18</td>
     </tr>
     <tr>
       <th>3植物感應</th>
@@ -650,24 +680,24 @@
     </tr>
     <tr>
       <th>3水分恆定</th>
-      <td>12</td>
+      <td>13</td>
     </tr>
     <tr>
       <th>1體溫恆定</th>
-      <td>6</td>
+      <td>7</td>
     </tr>
     <tr>
       <th rowspan="5" valign="top">06生殖</th>
       <th>1細胞分裂與減數分裂</th>
-      <td>24</td>
+      <td>25</td>
     </tr>
     <tr>
       <th>2無性生殖</th>
-      <td>12</td>
+      <td>13</td>
     </tr>
     <tr>
       <th>5植物有性生殖</th>
-      <td>10</td>
+      <td>11</td>
     </tr>
     <tr>
       <th>3動物有性生殖</th>
@@ -680,7 +710,7 @@
     <tr>
       <th rowspan="4" valign="top">07遺傳</th>
       <th>1遺傳法則</th>
-      <td>11</td>
+      <td>13</td>
     </tr>
     <tr>
       <th>2人類的遺傳</th>
@@ -695,13 +725,13 @@
       <td>2</td>
     </tr>
     <tr>
-      <th rowspan="4" valign="top">08演化</th>
+      <th rowspan="5" valign="top">08演化</th>
       <th>1天擇與人擇</th>
-      <td>21</td>
+      <td>23</td>
     </tr>
     <tr>
       <th>2化石</th>
-      <td>6</td>
+      <td>7</td>
     </tr>
     <tr>
       <th>3地質年代</th>
@@ -712,13 +742,17 @@
       <td>2</td>
     </tr>
     <tr>
+      <th>4演化樹</th>
+      <td>1</td>
+    </tr>
+    <tr>
       <th rowspan="5" valign="top">09分類</th>
       <th>4植物界</th>
-      <td>26</td>
+      <td>27</td>
     </tr>
     <tr>
       <th>5動物界</th>
-      <td>19</td>
+      <td>20</td>
     </tr>
     <tr>
       <th>1命名與分類</th>
@@ -747,7 +781,7 @@
     </tr>
     <tr>
       <th>2交互關係</th>
-      <td>7</td>
+      <td>9</td>
     </tr>
     <tr>
       <th>4物質的循環</th>
@@ -768,7 +802,7 @@
     <tr>
       <th rowspan="6" valign="top">11其他</th>
       <th>1科學方法</th>
-      <td>4</td>
+      <td>7</td>
     </tr>
     <tr>
       <th>2閱讀測驗</th>
