--- a/d3/index.html
+++ b/d3/index.html
@@ -53,6 +53,7 @@
        
             <select id ="yearChoice" input="dropdown">
               <option value="全部">全部</option> 
+              <option value="111">111</option>              
               <option value="110">110</option>
               <option value="109">109</option>
               <option value="108">108</option>
